--- a/repetition-code/noise-model/implemented-by-qiskit-noise-model.ipynb
+++ b/repetition-code/noise-model/implemented-by-qiskit-noise-model.ipynb
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1dc707c9",
+   "id": "a6771625",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2e382b71",
+   "id": "2bfee35d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ea588a4c",
+   "id": "7a3cd143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,23 +362,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "74518ccf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'unitary' in AerSimulator().configuration().basis_gates"
+    "# 'unitary' in AerSimulator().configuration().basis_gates"
    ]
   },
   {
